# AOC_2023

./: AOC2023.cabal
app/: Main.hs
lib/: Solution.hs  Utils.hs
lib/days/: D1.hs  D2.hs  D3.hs  D4.hs  D5.hs
tests/: Test.hs
