cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         ronikettunen96@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2023
    main-is:          Main.hs

    build-depends:    base ^>=4.14.3.0,
                      aoc2023-lib
    hs-source-dirs:   app
    default-language: Haskell2010

library aoc2023-lib
    exposed-modules:  Solution

    other-modules:    Utils
                      D1
                      D2
                      D3
                      D4
                      D5

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
    build-depends:    base ^>=4.14.3.0,
                      bytestring ^>=0.11.4.0,
                      containers ^>=0.6.5.1
    hs-source-dirs:   app, lib, lib/days

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends:    base ^>=4.14,
                      bytestring ^>=0.11.4.0,
                      HUnit ^>=1.6,
                      aoc2023-lib
    hs-source-dirs: tests
    default-language: Haskell2010
